Final Check done, pushing with working compoents.

--- a/VaccineManagementSystem/src/UI/SystemAdminWorkArea/ManageEnterpriseJPanel.form
+++ b/VaccineManagementSystem/src/UI/SystemAdminWorkArea/ManageEnterpriseJPanel.form
@@ -89,6 +89,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblEntMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -177,7 +180,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JButton" name="btnSubmit">
+    <Component class="javax.swing.JButton" name="btnA">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="8d" green="9c" red="ff" type="rgb"/>
@@ -193,11 +196,11 @@
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSubmitActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAActionPerformed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="440" y="440" width="120" height="30"/>
+          <AbsoluteConstraints x="430" y="440" width="120" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
