--- a/VaccineManagementSystem/src/UI/CDC/CdcAdminWorkArea.form
+++ b/VaccineManagementSystem/src/UI/CDC/CdcAdminWorkArea.form
@@ -3,9 +3,6 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1300, 800]"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -115,6 +112,9 @@
             </Component>
             <Component class="javax.swing.JButton" name="btnVUR">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="13" style="0"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Vaccine Usage Report"/>
               </Properties>
               <Events>
@@ -122,7 +122,7 @@
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="30" y="410" width="-1" height="-1"/>
+                  <AbsoluteConstraints x="30" y="410" width="160" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
