--- a/VaccineManagementSystem/src/UI/MainLoginJFrame.form
+++ b/VaccineManagementSystem/src/UI/MainLoginJFrame.form
@@ -74,10 +74,10 @@
         <Component class="javax.swing.JTextField" name="txt_username">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="sansserif" size="14" style="0"/>
+              <Font name="sansserif" size="14" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="cc" type="rgb"/>
+              <Color blue="8d" green="9c" red="ff" type="rgb"/>
             </Property>
           </Properties>
           <Constraints>
@@ -89,10 +89,10 @@
         <Component class="javax.swing.JPasswordField" name="pass_password">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="sansserif" size="14" style="0"/>
+              <Font name="sansserif" size="14" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="cc" type="rgb"/>
+              <Color blue="8d" green="9c" red="ff" type="rgb"/>
             </Property>
           </Properties>
           <Events>
